# polars_qt

./: .gitignore  Cargo.toml  Makefile  README.md  build.requirements.txt  pyproject.toml  requirements.txt  run.py
.github/workflows/: publish_to_pypi.yml
polars_qt/: __init__.py  equity.py  funcs.py  qt.py  qt.py.5aabbc576dc1d426006c7dc7f0f55338.tmp  strategy.py  utils.py
src/: compose.rs  equity.rs  expressions.rs  if_then.rs  lib.rs  output_func.rs  rolling_rank.rs  utils.rs
src/funcs/: binary_consecutive_prop.rs  binary_pattern_vote.rs  compose_by.rs  cut.rs  fdiff.rs  half_life.rs  if_then.rs  linspace.rs  mod.rs  rolling_ewm.rs  rolling_funcs.rs  rolling_rank.rs  tick_up_prob.rs  to_trades.rs  zscore.rs
src/strategy/: boll.rs  boll_vol_stop.rs  from_input.rs  macros.rs  martingale.rs  mod.rs
tests/: test_compose_by.py  test_equity.py  test_funcs,py  test_funcs.py  test_if_then.py  test_rolling_rank.py  test_strategy.py
