[package]
name = "polars-qt"
version = "0.1.20"
edition = "2021"

[lib]
name = "polars_qt"
crate-type = ["cdylib"]

[features]
default = ["equity", "strategy"]
equity = []
strategy = []

[dependencies]
itertools = "0.13"
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.40", default-features = false, features = [
    "rolling_window",
    "temporal",
] }

[dependencies.tevec]
git = "https://github.com/Teamon9161/tevec.git"
branch = "master"
default-features = false
features = ['pl', "statrs", "rolling"]


[dependencies.tea_strategy]
git = "https://github.com/Teamon9161/tea_strategy.git"
branch = "master"
default-features = false
features = ['pl']
