[package]
name = "polars-qt"
version = "0.1.24"
edition = "2021"

[lib]
name = "polars_qt"
crate-type = ["cdylib"]

[features]
default = ["equity", "strategy"]
equity = []
strategy = []

[dependencies]
itertools = "0.13"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.15.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.41.2", default-features = false, features = [
    "rolling_window",
    "temporal",
] }
gauss-quad = "0.1.9"

[dependencies.tevec]
git = "https://github.com/Teamon9161/tevec.git"
branch = "master"
default-features = false
features = ['pl', "stat", "rolling"]


[dependencies.tea_strategy]
git = "https://github.com/Teamon9161/tea_strategy.git"
branch = "master"
default-features = false
features = ['pl']
