[project]
name = "polars-qt"
requires-python = ">=3.8"
authors = [
    { name = "Teamon9161", email = "teamon9161@163.com" }
]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "polars>=0.20.16",
]

[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.20.16"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "maturin>=1.5.1",
    "pip>=24.0",
    "ruff>=0.3.5",
]
